.metadata/.plugins/org.eclipse.cdt.ui/MPU6050_DENEME.build.log
15:11:42 **** Incremental Build of configuration Debug for project MPU6050_DENEME ****
Info: Internal Builder is used for build
arm-atollic-eabi-gcc -c -mthumb -mcpu=cortex-m0 -std=gnu11 -DUSE_HAL_DRIVER -DSTM32F030x6 -I../Core/Inc -I../Drivers/STM32F0xx_HAL_Driver/Inc -I../Drivers/STM32F0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F0xx/Include -I../Drivers/CMSIS/Include -ffunction-sections -fdata-sections -g -fstack-usage -Wall -specs=nano.specs -o Core\Src\main.o ..\Core\Src\main.c 
..\Core\Src\main.c: In function 'main':
..\Core\Src\main.c:171:19: error: 'true' undeclared (first use in this function)
        set_gyro = true;
                   ^~~~
..\Core\Src\main.c:171:19: note: each undeclared identifier is reported only once for each function it appears in
Info: Parallel threads used: 1

15:11:43 Build Finished (took 140ms)

